--- a/datenschutz.html
+++ b/datenschutz.html
@@ -14,13 +14,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-<link href="css/style.css" rel="stylesheet" media="screen">
-<link href="css/enhanced-styles.css" rel="stylesheet" media="screen">
-<link href="css/des-inspiration.css" rel="stylesheet" media="screen">
-<link href="css/liquid-glass.css" rel="stylesheet" media="screen">
-<link href="css/neuemachina-font.css" rel="stylesheet" media="screen">
-<link href="css/futuristic-design.css" rel="stylesheet" media="screen">
-<link href="css/performance-animations.css" rel="stylesheet" media="screen">
+<link href="css/app.bundle.css" rel="stylesheet" media="screen">
 </head>
 <body>
   
@@ -362,17 +356,8 @@
 
 <!-- SCRIPTS -->
 
-<script src="js/perf-helpers.js" defer></script>
 <script src="js/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/smoothscroll.js" defer></script>
-<script src="js/jquery.validate.min.js" defer></script>
-<script src="js/wow.min.js" defer></script>
-<script src="js/jquery.stellar.min.js" defer></script>
-<script src="js/jquery.magnific-popup.js" defer></script>
-<script src="js/owl.carousel.min.js" defer></script>
-<script src="js/interface.js" defer></script>
-<script src="js/scroll-animations.js" defer></script>
+<script src="js/app.bundle.js" defer></script>
 
 <style>
 body, html {
