--- a/projects.html
+++ b/projects.html
@@ -16,13 +16,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <!-- Fallback: Inter als ähnliche moderne Schriftart -->
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-<link href="css/style.css" rel="stylesheet" media="screen">
-<link href="css/enhanced-styles.css" rel="stylesheet" media="screen">
-<link href="css/des-inspiration.css" rel="stylesheet" media="screen">
-<link href="css/liquid-glass.css" rel="stylesheet" media="screen">
-<link href="css/neuemachina-font.css" rel="stylesheet" media="screen">
-<link href="css/futuristic-design.css" rel="stylesheet" media="screen">
-<link href="css/performance-animations.css" rel="stylesheet" media="screen">
+<link href="css/app.bundle.css" rel="stylesheet" media="screen">
 <script>
 // Verhindere direktes Springen zu Hash beim Laden der Seite
 // und unterstütze zwischengespeicherte Hash-Navigation (z. B. aus anderen Seiten)
@@ -283,7 +277,7 @@
               </div>
               <div class="col-base col-sm-6 col-md-4">
                 <div class="image-overlay-wrapper">
-                  <img alt="" class="img-responsive" src="img/bg/tragwerksplanung.webp">
+                  <img alt="" class="img-responsive" src="img/bg/tragwerksplanung.webp" loading="lazy" decoding="async">
                 </div>
               </div>
             </div>
@@ -602,7 +596,7 @@
               <div class="col-base service-in-projects col-service col-sm-6 col-md-4 wow fadeInUp">
                 <div class="service-card-enhanced hello">
                   <div class="service-icon-enhanced">
-                    <img alt="" src="img/img-icon/icon-architecture.png">
+                    <img alt="" src="img/img-icon/icon-architecture.png" loading="lazy" decoding="async">
                   </div>
                   <h3 class="service-title-enhanced">Statische Berechnung</h3>
                   <p class="service-description-enhanced">Unsere statischen Berechnungen sichern die Tragfähigkeit und Stabilität Ihres Bauwerks. Sie bilden die verlässliche Grundlage für Planung, Genehmigung und erfolgreiche Realisierung jedes Projekts.</p>
@@ -611,7 +605,7 @@
               <div class="col-base service-in-projects col-service col-sm-6 col-md-4 wow fadeInUp" data-wow-delay="0.3s">
                 <div class="service-card-enhanced hello">
                   <div class="service-icon-enhanced">
-                    <img alt="" src="img/img-icon/icon-interiors.png">
+                    <img alt="" src="img/img-icon/icon-interiors.png" loading="lazy" decoding="async">
                   </div>
                   <h3 class="service-title-enhanced">Tragwerksoptimierung</h3>
                   <p class="service-description-enhanced">Bei bestehenden Tragwerken analysieren wir die Nutzungsfähigkeit anhand der einwirkenden Kräfte, Spannungen und Verformungen. Anschließend optimieren wir die Konstruktion durch gezielte Materialergänzungen oder -umverteilungen.</p>
@@ -621,7 +615,7 @@
               <div class="col-base service-in-projects col-service col-sm-6 col-md-4 wow fadeInUp" data-wow-delay="0.6s">
                 <div class="service-card-enhanced hello">
                   <div class="service-icon-enhanced">
-                    <img alt="" src="img/img-icon/icon-planing.png">
+                    <img alt="" src="img/img-icon/icon-planing.png" loading="lazy" decoding="async">
                   </div>
                   <h3 class="service-title-enhanced">FE-Modelle</h3>
                   <p class="service-description-enhanced">Die Finite-Elemente-Methode ermöglicht eine besonders präzise Analyse von Stab- und Flächentragwerken. Sie liefert exakte Ergebnisse und unterstützt die effiziente Planung sowie nachhaltige Optimierung komplexer Strukturen.</p>
@@ -630,7 +624,7 @@
               <div class="col-base service-in-projects col-service col-sm-6 col-md-4 wow fadeInUp" data-wow-delay="0.9s">
                 <div class="service-card-enhanced hello">
                   <div class="service-icon-enhanced">
-                    <img alt="" src="img/img-icon/icon-architecture.png">
+                    <img alt="" src="img/img-icon/icon-architecture.png" loading="lazy" decoding="async">
                   </div>
                   <h3 class="service-title-enhanced">Positionspläne</h3>
                   <p class="service-description-enhanced">Der Positionsplan liefert eine präzise Übersicht über die genaue Lage und Bezeichnung aller berechneten Bauteile. Er dient als klare Grundlage für die Kommunikation zwischen Planung, Ausführung und Kontrolle auf der Baustelle.</p>
@@ -639,7 +633,7 @@
               <div class="col-base service-in-projects col-service col-sm-6 col-md-4 wow fadeInUp" data-wow-delay="1.2s">
                 <div class="service-card-enhanced hello">
                   <div class="service-icon-enhanced">
-                    <img alt="" src="img/img-icon/icon-interiors.png">
+                    <img alt="" src="img/img-icon/icon-interiors.png" loading="lazy" decoding="async">
                   </div>
                   <h3 class="service-title-enhanced">Mengenermittlung</h3>
                   <p class="service-description-enhanced">Statikbüro24 setzt bei der Tragwerksplanung auf eine modellbasierte Mengenermittlung mithilfe von Building Information Modeling (BIM). Dadurch werden Planung, Koordination und Ausführung Ihres Bauprojekts deutlich effizienter gestaltet.</p>
@@ -648,7 +642,7 @@
               <div class="col-base service-in-projects col-service col-sm-6 col-md-4 wow fadeInUp" data-wow-delay="1.5s">
                 <div class="service-card-enhanced hello">
                   <div class="service-icon-enhanced">
-                    <img alt="" src="img/img-icon/icon-planing.png">
+                    <img alt="" src="img/img-icon/icon-planing.png" loading="lazy" decoding="async">
                   </div>
                   <h3 class="service-title-enhanced">Tragwerksplanung im Bestand</h3>
                   <p class="service-description-enhanced">Bei der Sanierung oder Modernisierung bestehender Gebäude berücksichtigen wir alle statischen Anforderungen und entwickeln wirtschaftliche Lösungen. So erhalten Sie ein vollständiges Leistungspaket, das Zeit, Kosten und Aufwand reduziert.</p>
@@ -684,7 +678,7 @@
               </div>
               <div class="col-base col-sm-6 col-md-4">
                 <div class="image-overlay-wrapper">
-                  <img alt="" class="img-responsive" src="img/bg/standsicherheitsnachweis.webp">
+                  <img alt="" class="img-responsive" src="img/bg/standsicherheitsnachweis.webp" loading="lazy" decoding="async">
                 </div>
               </div>
             </div>
@@ -705,7 +699,7 @@
               <div class="col-base service-in-projects col-service col-sm-6 col-md-4 wow fadeInUp">
                 <div class="service-card-enhanced hello">
                   <div class="service-icon-enhanced">
-                    <img alt="" src="img/img-icon/icon-architecture.png">
+                    <img alt="" src="img/img-icon/icon-architecture.png" loading="lazy" decoding="async">
                   </div>
                   <h4 class="service-title-enhanced">Erstellung</h4>
                   <p class="service-description-enhanced">Wir erstellen den Standsicherheitsnachweis für Ihr Bauprojekt unter Berücksichtigung sämtlicher statischer und normativer Faktoren. Unsere erfahrenen Ingenieure gewährleisten exakte Berechnungen mit modernster Software und höchster Präzision.</p>
@@ -714,7 +708,7 @@
               <div class="col-base service-in-projects col-service col-sm-6 col-md-4 wow fadeInUp" data-wow-delay="0.3s">
                 <div class="service-card-enhanced hello">
                   <div class="service-icon-enhanced">
-                    <img alt="" src="img/img-icon/icon-interiors.png">
+                    <img alt="" src="img/img-icon/icon-interiors.png" loading="lazy" decoding="async">
                   </div>
                   <h4 class="service-title-enhanced">Tragwerksplanung</h4>
                   <p class="service-description-enhanced">Tragwerksplanung für nachhaltige Bauprojekte: Unsere Ingenieure entwickeln individuelle Konzepte, die höchste Stabilität mit Effizienz, Wirtschaftlichkeit und Ressourcenschonung verbinden. So entstehen zukunftsfähige und langlebige Bauwerke.</p>
@@ -724,7 +718,7 @@
               <div class="col-base service-in-projects col-service col-sm-6 col-md-4 wow fadeInUp" data-wow-delay="0.6s">
                 <div class="service-card-enhanced hello">
                   <div class="service-icon-enhanced">
-                    <img alt="" src="img/img-icon/icon-planing.png">
+                    <img alt="" src="img/img-icon/icon-planing.png" loading="lazy" decoding="async">
                   </div>
                   <h4 class="service-title-enhanced">Dokumentation</h4>
                   <p class="service-description-enhanced">Umfassende Dokumentation aller statischen Berechnungen und Nachweise für Ihren Bauantrag.</p>
@@ -1491,17 +1485,8 @@
 
 <!-- SCRIPTS -->
 
-<script src="js/perf-helpers.js" defer></script>
 <script src="js/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/smoothscroll.js" defer></script>
-<script src="js/jquery.validate.min.js" defer></script>
-<script src="js/wow.min.js" defer></script>
-<script src="js/jquery.stellar.min.js" defer></script>
-<script src="js/jquery.magnific-popup.js" defer></script>
-<script src="js/owl.carousel.min.js" defer></script>
-<script src="js/interface.js" defer></script>
-<script src="js/scroll-animations.js" defer></script>
+<script src="js/app.bundle.js" defer></script>
 
 <!-- KRITISCH: Dieses Script muss NACH interface.js laufen -->
 <script>
