--- a/projekte.html
+++ b/projekte.html
@@ -16,13 +16,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <!-- Fallback: Inter als ähnliche moderne Schriftart -->
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-<link href="css/style.css" rel="stylesheet" media="screen">
-<link href="css/enhanced-styles.css" rel="stylesheet" media="screen">
-<link href="css/des-inspiration.css" rel="stylesheet" media="screen">
-<link href="css/liquid-glass.css" rel="stylesheet" media="screen">
-<link href="css/neuemachina-font.css" rel="stylesheet" media="screen">
-<link href="css/futuristic-design.css" rel="stylesheet" media="screen">
-<link href="css/performance-animations.css" rel="stylesheet" media="screen">
+<link href="css/app.bundle.css" rel="stylesheet" media="screen">
 </head>
 <body>
   
@@ -222,7 +216,7 @@
             <!-- Projekt 1 -->
             <div id="projekt-tempelhof" class="projekt-item slide-in-from-left">
               <div class="projekt-image">
-                <img src="img/bg/Neubau-11-Parteienhauses-Tempelhof.jpg" alt="11-Parteienhauses in Berlin Tempelhof">
+                <img src="img/bg/Neubau-11-Parteienhauses-Tempelhof.jpg" alt="11-Parteienhauses in Berlin Tempelhof" loading="lazy" decoding="async">
                 <div class="projekt-overlay"></div>
               </div>
               <div class="projekt-info">
@@ -234,7 +228,7 @@
             <!-- Projekt 2 -->
             <div id="projekt-veddel" class="projekt-item slide-in-from-right">
               <div class="projekt-image">
-                <img src="img/bg/Projekt-DB-Gleisquerung-Veddeljpg.jpg" alt="DB-Gleisquerung Veddel">
+                <img src="img/bg/Projekt-DB-Gleisquerung-Veddeljpg.jpg" alt="DB-Gleisquerung Veddel" loading="lazy" decoding="async">
                 <div class="projekt-overlay"></div>
               </div>
               <div class="projekt-info">
@@ -246,7 +240,7 @@
             <!-- Projekt 3 -->
             <div id="projekt-worms" class="projekt-item slide-in-from-left">
               <div class="projekt-image">
-                <img src="img/bg/Neubau.jpg" alt="Modernes Mehrfamilienhaus">
+                <img src="img/bg/Neubau.jpg" alt="Modernes Mehrfamilienhaus" loading="lazy" decoding="async">
                 <div class="projekt-overlay"></div>
               </div>
               <div class="projekt-info">
@@ -258,7 +252,7 @@
             <!-- Projekt 4 -->
             <div id="projekt-28-parteien" class="projekt-item slide-in-from-right">
               <div class="projekt-image">
-                <img src="img/bg/28-Parteien-Haus-Architektur.jpg" alt="28 Parteien Haus">
+                <img src="img/bg/28-Parteien-Haus-Architektur.jpg" alt="28 Parteien Haus" loading="lazy" decoding="async">
                 <div class="projekt-overlay"></div>
               </div>
               <div class="projekt-info">
@@ -319,17 +313,8 @@
   </div>
 
 <!-- SCRIPTS -->
-<script src="js/perf-helpers.js" defer></script>
 <script src="js/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/smoothscroll.js" defer></script>
-<script src="js/jquery.validate.min.js" defer></script>
-<script src="js/wow.min.js" defer></script>
-<script src="js/jquery.stellar.min.js" defer></script>
-<script src="js/jquery.magnific-popup.js" defer></script>
-<script src="js/owl.carousel.min.js" defer></script>
-<script src="js/interface.js" defer></script>
-<script src="js/scroll-animations.js" defer></script>
+<script src="js/app.bundle.js" defer></script>
 
 <style>
 /* ===============================================
