--- a/index.html
+++ b/index.html
@@ -274,7 +274,6 @@
           </div>
         </div>
       </section>
-
       <section class="projects section">
         <div class="container">
           <h2 class="section-title slide-in-left">Unseren letzten <span class="text-primary">Projekte</span></h2>
@@ -505,10 +504,12 @@
 
       <!-- ROW 1 -->
       <div class="col-base col-service col-sm-6 col-md-4 wow fadeInUp breite slide-in-left">
-        <div class="service-item">
-          <img alt="" src="img/img-icon/icon-architecture.png" loading="lazy">
-          <h3>Tragwerksplanung</h3>
-          <p>Unsere Expertise in der Tragwerksplanung garantiert Ihnen innovative und sichere 
+        <div class="service-card-enhanced hello">
+          <div class="service-icon-enhanced">
+            <img alt="" src="img/img-icon/icon-architecture.png" loading="lazy" decoding="async">
+          </div>
+          <h3 class="service-title-enhanced">Tragwerksplanung</h3>
+          <p class="service-description-enhanced">Unsere Expertise in der Tragwerksplanung garantiert Ihnen innovative und sichere 
             Ingenieurlösungen für Ihr Bauprojekt. Vertrauen Sie auf unsere zuverlässige Fachberatung 
             für optimale Statik und Konstruktion!</p>
           <a href="projects.html#tragwerksplanung" class="btn btn-sm">Mehr erfahren</a>
@@ -516,72 +517,86 @@
       </div>
 
       <div class="col-base col-service col-sm-6 col-md-4 wow fadeInUp slide-in-up" data-wow-delay="0.1s">
-        <div class="service-item">
-          <img alt="" src="img/img-icon/icon-interiors.png" loading="lazy">
-          <h3>Standsicherheitsnachweis</h3>
-          <p>Wir erstellen präzise Standsicherheitsnachweise für Ihr Bauvorhaben. 
+        <div class="service-card-enhanced hello">
+          <div class="service-icon-enhanced">
+            <img alt="" src="img/img-icon/icon-interiors.png" loading="lazy" decoding="async">
+          </div>
+          <h3 class="service-title-enhanced">Standsicherheitsnachweis</h3>
+          <p class="service-description-enhanced">Wir erstellen präzise Standsicherheitsnachweise für Ihr Bauvorhaben. 
             Mit modernster Software und erfahrenen Ingenieuren gewährleisten wir höchste Sicherheit, zuverlässige Berechnungen und optimale Statik für Ihr Projekt.</p>
           <a href="projects.html#standsicherheitsnachweis" class="btn btn-sm">Mehr erfahren</a>
         </div>
       </div>
 
       <div class="col-base col-service col-sm-6 col-md-4 wow fadeInUp position slide-in-right" data-wow-delay="0.2s">
-        <div class="service-item">
-          <img alt="" src="img/img-icon/icon-planing.png" loading="lazy">
-          <h3>Bauantrag</h3>
-          <p>Erfolgreicher Bauantrag – Grundlage für sicheren Hausbau. Die Statikprüfung ist unerlässlich. 
+        <div class="service-card-enhanced hello">
+          <div class="service-icon-enhanced">
+            <img alt="" src="img/img-icon/icon-planing.png" loading="lazy" decoding="async">
+          </div>
+          <h3 class="service-title-enhanced">Bauantrag</h3>
+          <p class="service-description-enhanced">Erfolgreicher Bauantrag – Grundlage für sicheren Hausbau. Die Statikprüfung ist unerlässlich. 
             Wir bieten umfassende Informationen, Unterstützung und gewährleisten eine reibungslose Genehmigung Ihres Bauvorhabens.</p>
-          <a href="projects.html#bauantrag" class="btn btn-sm ">Mehr erfahren</a>
+          <a href="projects.html#bauantrag" class="btn btn-sm">Mehr erfahren</a>
         </div>
       </div>
 
       <!-- ROW 2 -->
       <div class="col-base col-service col-sm-6 col-md-4 wow abstand fadeInUp slide-in-left" data-wow-delay="0.3s">
-        <div class="service-item">
-          <img alt="" src="img/img-icon/icon-planing.png" loading="lazy">
-          <h3>Schallschutznachweis</h3>
-          <p>Ein effektiver Schallschutz ist nicht nur häufig gesetzlich vorgeschrieben, sondern kann auch zukünftige Probleme bei Verkauf oder Vermietung vermeiden. 
+        <div class="service-card-enhanced hello">
+          <div class="service-icon-enhanced">
+            <img alt="" src="img/img-icon/icon-planing.png" loading="lazy" decoding="async">
+          </div>
+          <h3 class="service-title-enhanced">Schallschutznachweis</h3>
+          <p class="service-description-enhanced">Ein effektiver Schallschutz ist nicht nur häufig gesetzlich vorgeschrieben, sondern kann auch zukünftige Probleme bei Verkauf oder Vermietung vermeiden. 
             Daher ist ein gut durchdachtes Schallschutzkonzept für die meisten Bauvorhaben unerlässlich.</p>
-          <a href="projects.html#schallschutznachweis" class="btn button btn-sm">Mehr erfahren</a>
+          <a href="projects.html#schallschutznachweis" class="btn btn-sm">Mehr erfahren</a>
         </div>
       </div>
 
       <div class="col-base col-service col-sm-6 col-md-4 abstand wow fadeInUp slide-in-up" data-wow-delay="0.4s">
-        <div class="service-item">
-          <img alt="" src="img/img-icon/icon-architecture.png" loading="lazy">
-          <h3>Wärmeschutznachweis</h3>
-          <p>Wir bieten den erforderlichen Wärmeschutznachweis nach GEG für antragspflichtige Bauvorhaben, der nur von qualifizierten Architekten und Bauingenieuren erstellt werden darf.
+        <div class="service-card-enhanced hello">
+          <div class="service-icon-enhanced">
+            <img alt="" src="img/img-icon/icon-architecture.png" loading="lazy" decoding="async">
+          </div>
+          <h3 class="service-title-enhanced">Wärmeschutznachweis</h3>
+          <p class="service-description-enhanced">Wir bieten den erforderlichen Wärmeschutznachweis nach GEG für antragspflichtige Bauvorhaben, der nur von qualifizierten Architekten und Bauingenieuren erstellt werden darf.
              Wir unterstützen Sie dabei, alle behördlichen Anforderungen zu erfüllen.</p>
-          <a href="projects.html#wärmeschutznachweis" class="btn button btn-sm">Mehr erfahren</a>
+          <a href="projects.html#wärmeschutznachweis" class="btn btn-sm">Mehr erfahren</a>
         </div>
       </div>
 
       <div class="col-base col-service col-sm-6 col-md-4  abstand wow fadeInUp slide-in-right" data-wow-delay="0.5s">
-        <div class="service-item">
-          <img alt="" src="img/img-icon/icon-architecture.png" loading="lazy">
-          <h3>Bewehrungsplan</h3>
-          <p>Als professionelles Ingenieurbüro erstellen wir Bewehrungs- und Schalpläne für Ihre Bauprojekte. 
+        <div class="service-card-enhanced hello">
+          <div class="service-icon-enhanced">
+            <img alt="" src="img/img-icon/icon-architecture.png" loading="lazy" decoding="async">
+          </div>
+          <h3 class="service-title-enhanced">Bewehrungsplan</h3>
+          <p class="service-description-enhanced">Als professionelles Ingenieurbüro erstellen wir Bewehrungs- und Schalpläne für Ihre Bauprojekte. 
             Unser Leistungsspektrum umfasst zudem Positionspläne, Lasten- und Lastenabtragspläne sowie Konstruktionspläne im Stahlbau.</p>
-          <a href="projects.html#bewehrungsplan" class="btn button btn-sm">Mehr erfahren</a>
+          <a href="projects.html#bewehrungsplan" class="btn btn-sm">Mehr erfahren</a>
         </div>
       </div>
 
       <!-- ROW 3 -->
       <div class="col-base col-service col-sm-6 col-md-4 wow fadeInUp slide-in-left" data-wow-delay="0.6s">
-        <div class="service-item">
-          <img alt="" src="img/img-icon/icon-interiors.png" loading="lazy">
-          <h3>Energieausweis</h3>
-          <p>Wissen Sie, ob Ihr Gebäude effizient oder energieintensiv ist? Ein Energieausweis schafft Klarheit. 
+        <div class="service-card-enhanced hello">
+          <div class="service-icon-enhanced">
+            <img alt="" src="img/img-icon/icon-interiors.png" loading="lazy" decoding="async">
+          </div>
+          <h3 class="service-title-enhanced">Energieausweis</h3>
+          <p class="service-description-enhanced">Wissen Sie, ob Ihr Gebäude effizient oder energieintensiv ist? Ein Energieausweis schafft Klarheit. 
             Wir unterstützen Sie bei der energetischen Bewertung gemäß dem Gebäudeenergiegesetz (GEG) und entwickeln individuelle Lösungen für die Ausstellung von Energieausweisen.</p>
           <a href="projects.html#energieausweis" class="btn btn-sm">Mehr erfahren</a>
         </div>
       </div>
 
       <div class="col-base col-service col-sm-6 col-md-4 wow fadeInUp slide-in-right" data-wow-delay="0.7s">
-        <div class="service-item">
-          <img alt="" src="img/img-icon/icon-interiors.png" loading="lazy">
-          <h3>Brandschutznachweis</h3>
-          <p>Wir bieten professionelle Brandschutzplanung und -beratung für maximale Sicherheit Ihrer Gebäude – von Bürokomplexen bis Eigenheimen. 
+        <div class="service-card-enhanced hello">
+          <div class="service-icon-enhanced">
+            <img alt="" src="img/img-icon/icon-interiors.png" loading="lazy" decoding="async">
+          </div>
+          <h3 class="service-title-enhanced">Brandschutznachweis</h3>
+          <p class="service-description-enhanced">Wir bieten professionelle Brandschutzplanung und -beratung für maximale Sicherheit Ihrer Gebäude – von Bürokomplexen bis Eigenheimen. 
             Vertrauen Sie auf unsere maßgeschneiderten Lösungen und unser erfahrenes Team!</p>
           <a href="projects.html#brandschutznachweis" class="btn btn-sm">Mehr erfahren</a>
         </div>
@@ -755,23 +770,6 @@
           </div>
         </div>
       </section>
-
-      <section class="clients section">
-        <div class="container">
-          <header class="section-header">
-            <h2 class="section-title">Was unsere <span class="text-primary">Kunden</span> sagen</h2>
-            <strong class="fade-title-left">clients</strong>
-          </header>
-          <!-- Elfsight Google Reviews | Untitled Google Reviews -->
-          <div class="section-content">
-            <div class="elfsight-app-ead9122e-f2bf-4770-8f37-ee1a083c4c4d" ></div>
-          </div>
-          <div class="button-div">
-            <a href="https://maps.app.goo.gl/rF9WZVQ9SBgsgTk18" class="btn btn-shadow-2">Bewertung abgeben<i class="icon-next"></i></a>
-          </div>
-        </div>
-      </section>
-
       <!-- FAQ Section -->
 
       <section class="faq section">
