--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
           <strong class="fade-title-left">Projekte</strong>
         </header>
         <div class="section-content">
-          <div class="projects-carousel js-projects-carousel js-projects-gallery animate-stagger">
+          <div class="projects-carousel js-projects-carousel js-projects-gallery">
             <div class="project project-light slide-in-left">
               <a href="img/bg/Neubau-11-Parteienhauses-Tempelhof.jpg" title="Projekt 1">
                 <figure>
