--- a/index.html
+++ b/index.html
@@ -280,8 +280,8 @@
           <strong class="fade-title-left">Projekte</strong>
         </header>
         <div class="section-content">
-          <div class="projects-carousel js-projects-carousel js-projects-gallery">
-            <div class="project project-light slide-in-left">
+          <div class="">
+            <div class="">
               <a href="img/bg/Neubau-11-Parteienhauses-Tempelhof.jpg" title="Projekt 1">
                 <figure>
                   <img alt="" src="img/bg/Neubau-11-Parteienhauses-Tempelhof.jpg">
