--- a/index.html
+++ b/index.html
@@ -281,7 +281,15 @@
         </header>
         <div class="section-content">
           
-            <div class="project project-light slide-in-right">
+            <div style="display: none;" class="project project-light slide-in-right">
+              <a href="img/bg/Projekt-DB-Gleisquerung-Veddeljpg.jpg" title="Projekt 2">
+                <figure>
+                  <img alt="" src="img/bg/Projekt-DB-Gleisquerung-Veddeljpg.jpg">
+                 
+                </figure>
+              </a>
+            </div>
+             <div class="project project-light slide-in-right">
               <a href="img/bg/Projekt-DB-Gleisquerung-Veddeljpg.jpg" title="Projekt 2">
                 <figure>
                   <img alt="" src="img/bg/Projekt-DB-Gleisquerung-Veddeljpg.jpg">
