--- a/index.html
+++ b/index.html
@@ -289,8 +289,8 @@
                 </figure>
               </a>
             </div>
-             <div class="project project-light slide-in-right">
-              <a href="img/bg/Projekt-DB-Gleisquerung-Veddeljpg.jpg" title="Projekt 2">
+             <div class="">
+              <a href="img/bg/Projekt-DB-Gleisquerung-Veddeljpg.jpg" title="">
                 <figure>
                   <img alt="" src="img/bg/Projekt-DB-Gleisquerung-Veddeljpg.jpg">
                  
